force-app/main/default/objects/Session_Registration__c/Session_Registration__c.object-meta.xml
<CustomObject>
    <label>Session Registration</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Session Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>