force-app/main/default/objects/Session_Registration__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Session&apos;s cancellation is checked</description>
    <inlineHelpText>If you want to cancel the session registration, tick the checkbox.</inlineHelpText>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>