force-app/main/default/objects/Session_Registration__c/fields/Cancelled_Text__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Text__c</fullName>
    <label>Cancelled Text</label>
    <length>9</length>
    <type>Text</type>
</CustomField>