force-app/main/default/objects/Session_Registration__c/fields/Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Registration</label>
    <referenceTo>Event_Registration__c</referenceTo>
    <relationshipLabel>Session Registrations</relationshipLabel>
    <relationshipName>Session_Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>