force-app/main/default/objects/Session_Registration__c/fields/IsEventRegistered__c.field-meta.xml
<CustomField>
    <fullName>IsEventRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEventRegistered</label>
    <type>Checkbox</type>
</CustomField>