force-app/main/default/objects/Session_Registration__c/fields/IsOverlaps__c.field-meta.xml
<CustomField>
    <fullName>IsOverlaps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOverlaps</label>
    <type>Checkbox</type>
</CustomField>