force-app/main/default/objects/Session_Registration__c/fields/JunctionID__c.field-meta.xml
<CustomField>
    <fullName>JunctionID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique ID field for attendee and session pair</description>
    <label>JunctionID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>