force-app/main/default/objects/Session_Registration__c/recordTypes/Attendee_Registration.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Registration</fullName>
    <active>true</active>
    <label>Attendee Registration</label>
</RecordType>