force-app/main/default/objects/Session_Registration__c/recordTypes/Speaker_Registration.recordType-meta.xml
<RecordType>
    <fullName>Speaker_Registration</fullName>
    <active>true</active>
    <label>Speaker Registration</label>
</RecordType>