force-app/main/default/objects/Session_Registration__c/validationRules/Capacity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Session__r.Room_Capacity__c  =  Session__r.Number_of_Registered_Attendee__c</errorConditionFormula>
    <errorMessage>The capacity is full for this session. There is no additional seat for a new attendee</errorMessage>
</ValidationRule>