force-app/main/default/objects/Session_Registration__c/validationRules/Event_Not_Registered.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Not_Registered</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsEventRegistered__c = FALSE,  RecordType.Name  &lt;&gt; &quot;Speaker Registration&quot;)</errorConditionFormula>
    <errorMessage>Attendee must be registered to related event</errorMessage>
</ValidationRule>