force-app/main/default/objects/Session_Registration__c/validationRules/Is_Overlaps_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Overlaps_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IsOverlaps__c</errorConditionFormula>
    <errorMessage>This session overlaps with previous registrations</errorMessage>
</ValidationRule>