force-app/main/default/objects/Session_Registration__c/validationRules/Session_Belongs_To_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Belongs_To_Event</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Registration__r.Public_Event__c  &lt;&gt;  Session__r.Public_Event__c</errorConditionFormula>
    <errorDisplayField>Session__c</errorDisplayField>
    <errorMessage>Selected session isn&apos;t belongs to selected Event</errorMessage>
</ValidationRule>